# agi-lab

./: .env.sample  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_CARD.md  EVAL_CARD.md  LICENSE  MODEL_CARD.md  Makefile  README.md  SECURITY.md  pyproject.toml
agilab/: cli.py
agilab/agents/: react.py  toolformer.py
agilab/agents/memory/: episodic_buffer.py  (+1 more)
agilab/data_tools/: contam.py  curate.py  dedup.py  metrics.py
agilab/eval/: gsm8k.py  harness.py  humaneval.py  mmlu.py  swebench.py
agilab/interpretability/: circuits.py  probes.py  viz.py
agilab/models/: loader.py  lora.py  moe.py  spec_decode.py
agilab/train/: data_pipeline.py  dpo.py  prm.py  sft.py
agilab/utils/: dist.py  io.py  logging.py  sampling.py  seeds.py
configs/: defaults.yaml
configs/agent/: memory.yaml  react.yaml  toolformer.yaml
configs/data/: contam.yaml  curation.yaml  dedup.yaml
configs/eval/: gsm8k.yaml  humaneval.yaml  mmlu.yaml  swebench.yaml
configs/train/: dpo.yaml  moe.yaml  prm.yaml  sft.yaml
datasets/: prepare_gsm8k.py  prepare_humaneval.py  prepare_mmlu.py  prepare_swebench.py  registry.yaml
datasets/local/: README.md  prefs_v1.jsonl  sft_v1.jsonl
docker/: Dockerfile  compose.yml
experiments/: TEMPLATE.md
experiments/2025-09-01_dpo_8b_min/: notes.md
notebooks/: 01_quickstart.ipynb  02_interpretability_induction_heads.ipynb  03_agent_memory_design.ipynb
scripts/: bootstrap.sh  contam_scan.sh  dedup.sh  run_eval.sh  train_dpo.sh  train_moe.sh  train_prm.sh  train_sft.sh
tests/: test_agents.py  test_dedup.py  test_eval_harness.py  test_train_configs.py
(+4 files in other folders)
