[project]
name = "agilab"
version = "0.1.0"
description = "Pragmatic AGI research monorepo"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "You"}]
dependencies = [
  "torch>=2.3",
  "transformers>=4.43",
  "accelerate>=0.33",
  "bitsandbytes>=0.43; platform_system == 'Linux'",
  "trl>=0.9",
  "datasets>=2.20",
  "tiktoken>=0.7",
  "hydra-core>=1.3",
  "einops>=0.8",
  "evaluate>=0.4",
  "lm-eval==0.4.2",
  "numba>=0.60",
  "scikit-learn>=1.5",
  "pydantic>=2.7",
  "uvloop; sys_platform == 'linux'",
  "rich>=13.7",
  "typer>=0.12",
  "psutil>=6.0",
  "pandas>=2.2",
  "numpy>=1.26",
  "wandb>=0.17",
  "peft>=0.11",
]

[project.scripts]
agilab = "agilab.cli:app"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
